--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,7 @@ deploy:
     - provider: releases
       skip_cleanup: true
       overwrite: true
-      api_key:
-          secure: $GITHUB_API_KEY
+      api_key: $GITHUB_API_KEY
       file: $ARTIFACT_ID.$POM_VERSION.zip
       on:
         tags: true
